# torchrec

./: .gitmodules  .pre-commit-config.yaml
contrib/dynamic_embedding/: CMakeLists.txt  setup.py
contrib/dynamic_embedding/src/3rd/: CMakeLists.txt
contrib/dynamic_embedding/src/tde/: CMakeLists.txt  bind.cpp  id_transformer.cpp  id_transformer.h  ps.cpp  ps.h  tensor_list.h
contrib/dynamic_embedding/src/tde/details/: bits_op.cpp  cacheline_id_transformer.h  cacheline_id_transformer_benchmark.cpp  cacheline_id_transformer_impl.h  cacheline_id_transformer_test.cpp  fetcher.h  id_transformer_registry.h  id_transformer_registry_test.cpp  id_transformer_variant.cpp  id_transformer_variant.h  id_transformer_variant_benchmark.cpp  id_transformer_variant_test.cpp  io.cpp  io.h  io_registry.cpp  io_registry.h  mixed_lfu_lru_strategy.cpp  mixed_lfu_lru_strategy.h  mixed_lfu_lru_strategy_benchmark.cpp  mixed_lfu_lru_strategy_evict_benchmark.cpp  mixed_lfu_lru_strategy_test.cpp  multithreaded_id_transformer.h  multithreaded_id_transformer_benchmark.cpp  multithreaded_id_transformer_impl.h  multithreaded_id_transformer_test.cpp  naive_id_transformer.h  naive_id_transformer_benchmark.cpp  naive_id_transformer_impl.h  naive_id_transformer_test.cpp  notification.cpp  redis_io_v1.h  (+8 more)
contrib/dynamic_embedding/src/torchrec_dynamic_embedding/: __init__.py  dataloader.py  id_transformer.py  id_transformer_collection.py  id_transformer_group.py  ps.py  tensor_list.py
contrib/dynamic_embedding/tests/: test_id_transformer.py  test_id_transformer_collection.py  test_ps.py  test_ps_collection.py  utils.py
contrib/dynamic_embedding/toolchains/: gcc_not_use_cxx11_abi.cmake  gcc_use_cxx11_abi.cmake
contrib/dynamic_embedding/tools/: before_linux_build.sh  repair_wheel.sh
(+2 files in other folders)
